# scrambled_eggs

./: Cargo.toml  README.md  test.csv
.github/workflows/: rust.yml
src/: lib.rs  main.rs  tx.rs
